sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request_Mapping__mdt/Staging_Bulk_Upload_Request_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-15978 : It stores the csv column name and its corresponding field mapping to bulk staging request object</description>
    <label>Staging Bulk Upload Request Mapping</label>
    <pluralLabel>Staging Bulk Upload Request Mappings</pluralLabel>
</CustomObject>