sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request_Mapping__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>LEM-15978: Stores API Name of the corresponding csv column.</description>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>