sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request_Mapping__mdt/fields/CSV_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>CSV_Column_Name__c</fullName>
    <description>LEM-15978: Stores exact column name as in the csv.</description>
    <label>CSV Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>