sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request_Mapping__mdt/fields/Datatype__c.field-meta.xml
<CustomField>
    <fullName>Datatype__c</fullName>
    <description>LEM-15978: Stores Data type of the corresponding csv column.</description>
    <label>Datatype</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
                <default>true</default>
                <label>STRING</label>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>TIME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>