sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request_Mapping__mdt/fields/Staging_Bulk_Upload_Reference_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Staging_Bulk_Upload_Reference_Mapping__c</fullName>
    <description>LEM-15978: Stores reference to the Staging_Bulk_Upload_Reference_Mapping.</description>
    <label>Staging Bulk Upload Reference Mapping</label>
    <referenceTo>Staging_Bulk_Upload_Reference_Mapping__mdt</referenceTo>
    <relationshipLabel>Staging Bulk Upload Request Mappings</relationshipLabel>
    <relationshipName>Staging_Bulk_Upload_Request_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>