sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request_Mapping__mdt/listViews/Summary.listView-meta.xml
<ListView>
    <fullName>Summary</fullName>
    <columns>CSV_Column_Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Datatype__c</columns>
    <columns>Active__c</columns>
    <columns>Staging_Bulk_Upload_Reference_Mapping__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>Summary</label>
</ListView>